// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrape next site with instant scraper should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`scrape next site with instant scraper should group tags and images together that were found on the same page 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`scrape next site with psuedo-random delayed scraper should keep images and tags together, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;
